<resources>
    <string name="exit">再按一次退出拼车帮</string>
    <string name="app_name">拼车帮</string>
    <string name="share_2_friends">分享好友</string>
    <string name="common_no_data">没有数据</string>
    <string name="chengke">我是乘客</string>
    <string name="chezhu">我是车主</string>
    <string name="driver">车主</string>
    <string name="passenger">乘客</string>
    <string name="loginTitle">登录</string>
    <string name="phone_num">手机号</string>
    <string name="login_pwd">登录密码</string>
    <string name="login_btn">登录</string>
    <string name="reg_btn">注册账号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_ing">登录中\u2026</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="not_registered">此号码还未注册!</string>
    <string name="not_logged_in">未登录</string>
    <string name="login_now">立即登录</string>
    <string name="logout">退出应用</string>
    <string name="login_again">您的帐号已经过时或者已在别的设备上登录，请重新登录!</string>
    <string name="next_step">下一步</string>
    <string name="register_ing">注册中\u2026</string>
    <string name="register_validate_code">请输入四位验证码</string>
    <string name="register_get_validate_code">获取验证码</string>
    <string name="pwd_with_backspace">新密码</string>
    <string name="register_rpwd_hint">确认密码</string>
    <string name="dialog_confirm">确认</string>
    <string name="order_pay">立即付款</string>
    <string name="register_use_clause">使用条款</string>
    <string name="register_use_already_read">同意使用条款</string>
    <string name="go_login">已有账号，马上登录</string>
    <string name="update_user_info">正在保存信息\u2026</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="confirm">确定</string>
    <string name="main_foot_search">搜索</string>
    <string name="main_foot_publish">发布</string>
    <string name="car_service">汽车服务</string>
    <string name="home_home">首页</string>
    <string name="home_order">订单</string>
    <string name="activites">精彩活动</string>
    <string name="square_long">长途</string>
    <string name="square_long_space">长途&#160;&#160;&#160;&#160;</string>
    <string name="square_work">上下班</string>
    <string name="searchint">搜索中\u2026</string>
    <string name="search_find_passager">乘客发布</string>
    <string name="search_find_driver">司机发布</string>
    <string name="search_start_point_hint">请输入你出发的小区/写字楼</string>
    <string name="search_end_point_hint">请输入你想到达的小区/写字楼</string>
    <string name="search_result">搜索结果</string>
    <string name="choice_location">位置选择</string>
    <string name="search_no_result">未找到匹配结果，发布一条试试吧</string>
    <string name="publishTitle">发布拼车</string>
    <string name="publishNow">立即发布</string>
    <string name="publish_start_point_hint">请输入起点</string>
    <string name="publish_end_point_hint">请输入目的地</string>
    <string name="publish_period">时间段</string>
    <string name="publish_start_date">出发</string>
    <string name="publish_cost">费用</string>
    <string name="publish_cost_unit">元/人</string>
    <string name="publish_back_date_hint">选择返回时间</string>
    <string name="publish_back_date_no">没有返回时间</string>
    <string name="publish_remark">填写备注。如：不吸烟、可带宠物、上下班拼车日付。</string>
    <string name="publish_note">起点和终点距离小于</string>
    <string name="m">米</string>
    <string name="start_end_can_not_same">起点和终点不能相同</string>
    <string name="end_start_can_not_same">终点和起点不能相同</string>
    <string name="start_is_null">起点不能为空</string>
    <string name="end_is_null">终点不能为空</string>
    <string name="publish_date_wrong">出发时间应该在三个月以内</string>
    <string name="publish_get_detail_fault">获取拼车详情失败，请稍后再试</string>
    <string name="publish_data_update_success">信息修改成功</string>
    <string name="publish_btn_update_text">修改</string>
    <string name="publish_data_update_fault">信息修改失败，请稍后再试</string>
    <string name="publish_data_update_ing">拼车信息更新中\u2026</string>
    <string name="publish_btn_save_text">保存</string>
    <string name="publish_not_have_note">备注：无\u2026</string>
    <string name="publish_input_money">请输入费用信息</string>
    <string name="publish_money_error">费用只能是1到9999元</string>
    <string name="publish_date_change_fault">信息状态设置失败,请稍后再试</string>
    <string name="publish_info_delete">您即将删除当前拼车信息，是否删除</string>
    <string name="publish_no_info_1">你搜索的这条路线还没有人发布哟！</string>
    <string name="publish_no_info_2">立即去发布一条吧</string>
    <string name="publish_get_info_ing">正在获取发布信息\u2026</string>
    <string name="people_num_toast">可载人数必须是1-6人。</string>
    <string name="input_type_limit">只能输入字母，数字，中文，标点，空格!</string>
    <string name="input_type_error">输入非法字符</string>
    <string name="pick_details_through_point">途径点</string>
    <string name="my_publish_detail">我的发布详情</string>
    <string name="my_publish">我的发布</string>
    <string name="exit_login">退出登录</string>
    <string name="myself_car">我的爱车</string>
    <string name="myself_add_car">添加爱车</string>
    <string name="myself_login_psw">我的登录密码</string>
    <string name="myself_pay_psw">我的支付密码</string>
    <string name="pick_gender">选择性别</string>
    <string name="publish_ing">发布中\u2026</string>
    <string name="start_time_must_3month">出发时间应在3个月内。</string>
    <string name="start_time_must_after_publish">出发时间应在发布之后。</string>
    <string name="pwd_error">密码为6~16位字符</string>
    <string name="pwd_do_not_match">两次输入密码不一致</string>
    <string name="pay_pwd_error">密码为6~18位字符,且不能为纯数字</string>
    <string name="pay_pwd_error_1">两次输入密码不同</string>
    <string name="account_error">无效的账号</string>
    <string name="account_null">账号不能为空</string>
    <string name="my_balance">我的余额</string>
    <string name="my_pinche_coin">我的拼车币</string>
    <string name="my_commonly_used_address">我的常用拼车地点</string>
    <string name="my_love_car">我的爱车</string>
    <string name="pay_psw_setting_title">支付密码设置</string>
    <string name="update_name">修改昵称</string>
    <string name="update_pass">修改密码</string>
    <string name="update_input_name">请输入昵称</string>
    <string name="update_name_success">昵称修改成功</string>
    <string name="update_pass_success">密码修改成功，请重新登录</string>
    <string name="update_name_ing">正在修改昵称\u2026</string>
    <string name="update_pass_ing">正在修改密码\u2026</string>
    <string name="update_oldpass_short">当前密码少于6位</string>
    <string name="update_newpass_short">新密码少于6位</string>
    <string name="update_pass_not_equal">两次密码不匹配</string>
    <string name="update_gender_ing">正在修改性别\u2026</string>
    <string name="update_gender_success">性别修改成功</string>
    <string name="update_birthdate_ing">正在修改生日\u2026</string>
    <string name="update_birthdate_success">生日修改成功</string>
    <string name="update_driveage_ing">正在修改驾龄\u2026</string>
    <string name="update_driveage_success">驾龄修改成功</string>
    <string name="my_change_pay_psw_tip">为了保障您的账户资金安全，请设置支付密码保护。</string>
    <string name="entry_pay_psw">输入支付密码</string>
    <string name="entry_pay_psw_hint">长度为6&#8211;18位，不可纯数字</string>
    <string name="sure_pay_psw">确认支付密码</string>
    <string name="sure_pay_psw_hint">请再次输入密码</string>
    <string name="entry_verification_code">请输入验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="sure_change_pay_psw">确定</string>
    <string name="add_car_title">添加车辆</string>
    <string name="add_car_success">成功添加车辆信息</string>
    <string name="add_car_select_type">请选择车辆品牌</string>
    <string name="add_car_type">汽车品牌</string>
    <string name="car_verifying_tip">您的车辆处于正在验证或者验证通过状态，无法修改信息</string>
    <string name="car_verifying_get_carifo_tip">正在更新车辆状态</string>
    <string name="tip_unpay_psw">您还未设置支付密码，请先设置支付密码</string>
    <string name="entry_pay_psw_title">请输入您的支付密码</string>
    <string name="entry_pay_psw_hint_one">输入支付密码</string>
    <string name="entry_pay_psw_again_hint">确认支付密码</string>
    <string name="add_cash_account_text">添加你的提现账户（目前只支持支付宝）</string>
    <string name="modify_cash_account_text">修改你的提现账户（目前只支持支付宝）</string>
    <string name="add_cash_account_name">姓名：</string>
    <string name="add_cash_account_name_hint">请输入姓名</string>
    <string name="add_cash_account_alipay_hint">请输入支付宝账户</string>
    <string name="add_cash_account_alipay">支付宝账户：</string>
    <string name="add_other_cash_account_alipay">增加其他支付宝账户</string>
    <string name="get_cash_account_tip">获得支付宝账户</string>
    <string name="delect_cash_account_tip">正在删除支付宝账户</string>
    <string name="cash_account_title">提现账户设置</string>
    <string name="add_cash_account_success_toast">添加账户成功</string>
    <string name="add_or_modify_cash_account_success_toast">操作成功</string>
    <string name="adding_cash_account_tip">正在添加提现账户</string>
    <string name="entry_pay_psw_content_hint">请输入支付密码</string>
    <string name="car_vefic_small">小型汽车</string>
    <string name="car_vefic_medium">中型汽车</string>
    <string name="car_vefic_large">大型汽车</string>
    <string name="car_vefic_other">其它汽车</string>
    <string name="car_vefic_submit_info">在审核未完成之前不能修改验证信息，您确认提交？</string>
    <string name="car_vefic_submit_ing">正在提交验证信息\u2026</string>
    <string name="car_vefic_submit_success">车辆信息提交成功</string>
    <string name="car_vefic_submit_fail">车辆信息提交失败</string>
    <string name="car_vefic_check_card_info">请输入如”川A88888“的车牌号！</string>
    <string name="car_vefic_check_num_info">请输入17位字母和数字组成的车架号！</string>
    <string name="driver_verify_note_one">1、驾驶证为了验证车主的驾驶能力和资格</string>
    <string name="driver_verify_note_two">2、行驶证为了验证车辆的相关信息</string>
    <string name="driver_verify_note_three">3、车主的相关信息仅用于验证目的并且完全保密，请放心验证</string>
    <string name="driver_verify_licence_note">驾驶证验证</string>
    <string name="driver_verify_licence_orignial">驾驶证正本</string>
    <string name="driver_verify_licence_copy">驾驶证副本</string>
    <string name="driver_verify_vehicle_licence_note">行驶证验证</string>
    <string name="driver_verify_vehicle_licence_orignial">行驶证正本</string>
    <string name="driver_verify_vehicle_licence_copy">行驶证副本</string>
    <string name="driver_verify_nofity_verify_tips">正在提交验证通知...</string>
    <string name="driver_verify_nofity_upload_success_tips">你的信息已经上传成功，我们将在一个工作日内审核完毕</string>
    <string name="driver_verify_nofity_is_finish_tips">图片正在上传或者正在通知验证，请稍等片刻。。。</string>
    <string name="my_car_title">车辆信息</string>
    <string name="my_car_type">品牌</string>
    <string name="my_car_total_people">人数</string>
    <string name="my_car_license_plate">牌照</string>
    <string name="my_car_driving_years">驾龄</string>
    <string name="my_car_safe">车辆验证结果</string>
    <string name="my_car_btn_update">保存</string>
    <string name="hint_msg1">请输入您要反馈的意见：</string>
    <string name="hint_msg2">如果可以，留下您的联系方式，我们的客服会尽快联系您!</string>
    <string name="hint_msg3">联系方式</string>
    <string name="hint_msg4">请写下对我们产品的意见或建议\u2026</string>
    <string name="hint_msg5">QQ/微信／微博/电话（选填）</string>
    <string name="btn_submit">提交</string>
    <string name="des">image</string>
    <string name="has_ben_confirm">已完成</string>
    <string name="wait_pay">待付款</string>
    <string name="all">全部</string>
    <string name="setting_push">推送设置</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_push_order">订单推送</string>
    <string name="setting_check_update">检查更新</string>
    <string name="line_has_been_published">您的线路已经发布成功</string>
    <string name="share_2_friends_now">立即把线路分享给其他小伙伴</string>
    <string name="share_now">立即分享</string>
    <string name="common_home_address">家的位置:</string>
    <string name="choice_common_home_address">请选择家的位置</string>
    <string name="common_company_address">公司位置:</string>
    <string name="choice_common_company_address">请选择公司位置</string>
    <string name="input_recharge_num">请输入充值金额</string>
    <string name="choice_recharge_type">选择充值方式</string>
    <string name="alipay_recharge">支付宝充值</string>
    <string name="current_pcb">当前拼车币</string>
    <string name="how_to_get_pcb">如何获得拼车币</string>
    <string name="pcb_activity">拼车币活动</string>
    <string name="pcb_100_luck_draw">100拼车币抽大奖</string>
    <string name="phone_cash">手机  话费</string>
    <string name="click_join">点击参与</string>
    <string name="to_be_get_in_car">待上车</string>
</resources>