<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!-- title布局 -->

    <include layout="@layout/common_back_operate_title" />

    <!-- 意见反馈输入框 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_msg1"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />

        <EditText
            android:id="@+id/feedback_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_132"
            android:background="@drawable/item_layout_default"
            android:gravity="top"
            android:hint="@string/hint_msg4"
            android:maxLength="200"
            android:paddingLeft="@dimen/dp_15"
            android:paddingTop="@dimen/dp_15"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/textLength"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_34"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/hint_msg2"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/hint_msg3"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />

        <EditText
            android:id="@+id/feedback_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/item_layout_default"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_msg5"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:textColor="@color/btn_grey_normal"
            android:textSize="@dimen/sp_14" >
        </EditText>
    </LinearLayout>

    <!-- 提交按钮 -->

    <TextView
        android:id="@+id/feedback_btn_submit"
        style="@style/submit_btn"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/btn_submit" />

</LinearLayout>