<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"
    android:orientation="vertical" >

    <!-- 更多标题栏 -->

    <include
        layout="@layout/common_back_operate_title" />

    <TextView
        style="@style/match_warp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/setting_push"
        android:textColor="@color/deep_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/item_layout_default"
        android:orientation="horizontal" >

        <TextView
            style="@style/match_warp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_11"
            android:text="@string/setting_push_order"
            android:textSize="@dimen/sp_16" />

        <ImageButton
            android:id="@+id/setting_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:contentDescription="@string/des" />
    </RelativeLayout>

    <TextView
        style="@style/match_warp"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/setting_other"
        android:textColor="@color/deep_gray" />

    <RelativeLayout
        android:id="@+id/setting_check_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/item_layout_selector"
        android:clickable="true"
        android:orientation="horizontal" 
         >

        <TextView
            style="@style/match_warp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_11"
            android:text="@string/setting_check_update"
            android:textSize="@dimen/sp_16" >
        </TextView>

        <TextView
            android:id="@+id/text_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15" />
    </RelativeLayout>

</LinearLayout>