<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"
    android:orientation="vertical" >

    <include layout="@layout/common_back_operate_title" />
    <!-- 余额 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_79"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/mp_pc_money_value_title"
            style="@style/wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/current_pcb"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/mp_pc_money_value"
            style="@style/wrap_content"
            android:layout_alignLeft="@+id/mp_pc_money_value_title"
            android:layout_below="@+id/mp_pc_money_value_title"
            android:layout_marginBottom="120dp"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/red"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:id="@+id/mp_pc_money_get_pcb_layout"
            style="@style/wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/wrap_content"
                android:text="@string/how_to_get_pcb"
                android:textSize="@dimen/sp_18" />

            <ImageView
                style="@style/wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:contentDescription="@string/des"
                android:src="@drawable/pcb_right_arrow" />
        </LinearLayout>

        <View
            android:id="@+id/my_pc_money_divider"
            style="@style/item_divider"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mp_pc_money_middle_layout"
        style="@style/match_warp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/item_layout_default"
        android:paddingBottom="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10" >

        <TextView
            android:id="@+id/mp_pc_money_middle_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_34"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/pcb_activity"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:id="@+id/mp_pc_money_middle_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_below="@+id/mp_pc_money_middle_title"
            android:contentDescription="@string/des"
            android:src="@drawable/pcb_banner" />

        <TextView
            android:id="@+id/mp_pc_money_middle_pcb_title"
            style="@style/wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/mp_pc_money_middle_img"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_vertical"
            android:text="@string/pcb_100_luck_draw"
            android:textColor="@color/red"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/mp_pc_money_middle_pcb_phone_cash"
            style="@style/wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/mp_pc_money_middle_pcb_title"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_vertical"
            android:text="@string/phone_cash" />

        <Button
            android:id="@+id/mp_pc_money_click_join_btn"
            style="@style/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_35"
            android:layout_alignBottom="@+id/mp_pc_money_middle_pcb_phone_cash"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:text="@string/click_join" />
    </RelativeLayout>

</LinearLayout>