<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/search_result_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:orientation="vertical" >

        <ImageView
            style="@style/wrap_content"
            android:layout_marginBottom="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@drawable/head"
            android:contentDescription="@string/des" />

        <TextView
            style="@style/wrap_content"
            android:text="@string/search_no_result" />

        <Button
            android:id="@+id/search_no_publish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/btn_fillet_green_selector"
            android:text="@string/publishTitle"
            android:textColor="@color/btn_green_text_color"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <com.lepin.widget.PcbListView
        android:id="@+id/search_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/item_devider"
        android:dividerHeight="@dimen/dp_0point4" />

</FrameLayout>